<resources>
    <string name="app_name">NewsAlarm</string>
    <string name="txt_no_alarm">알람이 없습니다</string>
    <string name="txt_delete">삭제</string>
    <string name="txt_add">알람 추가</string>
    <string name="imgBtnExp">drawer appears when clicked</string>
    <string name="txt_sunday">일</string>
    <string name="txt_monday">월</string>
    <string name="txt_tuesday">화</string>
    <string name="txt_wednesday">수</string>
    <string name="txt_thursday">목</string>
    <string name="txt_friday">금</string>
    <string name="txt_saturday">토</string>
    <string name="txt_alarm_name">알람 이름</string>
    <string name="txt_tempo">알람음 속도</string>
    <string name="txt_bgm">알람음 크기</string>
    <string name="txt_vib">진동 세기</string>
    <string name="txt_news_topic">관심 있는 뉴스 주제</string>
    <string name="txt_voice">목소리 성별</string>
    <string name="txt_cancel">취소</string>
    <string name="txt_save">저장</string>
    <string name="tempo_value">x 1.0</string>
    <string name="choose_exact_date">특정 날짜로 고르기</string>
    <string name="choose_periodic_week">요일 선택</string>
    <string name="release_alarm">알람 해제</string>
    <string name="notify_alarm">알람이 울립니다!</string>

    <string-array name="topics">
        <item>시사</item>
        <item>정치</item>
        <item>경제</item>
        <item>이슈</item>
        <item>상식</item>
        <item>건강</item>
        <item>직접 입력</item>
    </string-array>

    <string-array name="gender">
        <item>남성</item>
        <item>여성</item>
    </string-array>
</resources>
