<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/alarmSetterScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/choose_exact_date"
                        android:textSize="25sp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/iconButtonStyle"
                        android:id="@+id/datePicker"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:icon="@android:drawable/ic_menu_month"
                        app:iconGravity="end"
                        app:iconSize="30dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/choose_periodic_week"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        style="@style/weekdayStyle"
                        android:id="@+id/tvSunday"
                        android:text="@string/txt_sunday"
                        android:textColor="@color/red" />

                    <TextView
                        style="@style/weekdayStyle"
                        android:id="@+id/tvMonday"
                        android:text="@string/txt_monday"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/weekdayStyle"
                        android:id="@+id/tvTuesday"
                        android:text="@string/txt_tuesday"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/weekdayStyle"
                        android:id="@+id/tvWednesday"
                        android:text="@string/txt_wednesday"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/weekdayStyle"
                        android:id="@+id/tvThursday"
                        android:text="@string/txt_thursday"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/weekdayStyle"
                        android:id="@+id/tvFriday"
                        android:text="@string/txt_friday"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/weekdayStyle"
                        android:id="@+id/tvSaturday"
                        android:text="@string/txt_saturday"
                        android:textColor="@color/blue" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/alarmSetterScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp">

                <EditText
                    android:id="@+id/etAlarmName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:textSize="25sp"
                    android:hint="@string/txt_alarm_name" />

                <EditText
                    android:id="@+id/etNewsTopic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:autofillHints="name"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:textSize="25sp"
                    android:hint="@string/txt_news_topic" />
            </LinearLayout>

            <LinearLayout
                style="@style/alarmSetterScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bgm"
                    android:textSize="25sp"
                    android:paddingHorizontal="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        style="@style/VolumeSettingImageStyle"
                        android:id="@+id/volumeImg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_gravity="center_vertical"
                        tools:ignore="ContentDescription" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slideVolume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="볼륨 크기"
                        android:valueFrom="0"
                        android:valueTo="100"
                        android:stepSize="10"
                        app:trackHeight="12dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="?android:attr/listDivider"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_vib"
                    android:textSize="25sp"
                    android:paddingHorizontal="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <ImageView
                        style="@style/VibSettingImageStyle"
                        android:id="@+id/vibImg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_gravity="center_vertical"
                        tools:ignore="ContentDescription" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slideVib"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="진동 세기"
                        android:valueFrom="0"
                        android:valueTo="100"
                        android:stepSize="10"
                        app:trackHeight="12dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            style="@style/buttonStyle"
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="2.5dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingVertical="10dp"
            android:text="@string/txt_cancel"
            android:textSize="25sp"
            android:stateListAnimator="@null"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/buttonStyle"
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="2.5dp"
            android:paddingVertical="10dp"
            android:text="@string/txt_save"
            android:textSize="25sp"
            android:stateListAnimator="@null"
            app:cornerRadius="20dp" />
    </LinearLayout>
</LinearLayout>
