<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/alarmListItemStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            style="@style/alarmListItemStyle.weekdayTextLayout"
            android:id="@+id/layoutSunday"
            android:layout_toStartOf="@id/layoutMonday">

            <View
                style="@style/alarmListItemStyle.weekdaySelectionStyle"
                android:id="@+id/sunSelect" />

            <TextView
                style="@style/alarmListItemStyle.weekdayTextStyle"
                android:id="@+id/tvSunday"
                android:text="@string/txt_sunday"
                android:textColor="@color/red" />
        </LinearLayout>

        <LinearLayout
            style="@style/alarmListItemStyle.weekdayTextLayout"
            android:id="@+id/layoutMonday"
            android:layout_toStartOf="@id/layoutTuesday">

            <View
                style="@style/alarmListItemStyle.weekdaySelectionStyle"
                android:id="@+id/monSelect" />

            <TextView
                style="@style/alarmListItemStyle.weekdayTextStyle"
                android:id="@+id/tvMonday"
                android:text="@string/txt_monday" />
        </LinearLayout>

        <LinearLayout
            style="@style/alarmListItemStyle.weekdayTextLayout"
            android:id="@+id/layoutTuesday"
            android:layout_toStartOf="@id/layoutWednesday">

            <View
                style="@style/alarmListItemStyle.weekdaySelectionStyle"
                android:id="@+id/tuesSelect" />

            <TextView
                style="@style/alarmListItemStyle.weekdayTextStyle"
                android:id="@+id/tvTuesday"
                android:text="@string/txt_tuesday" />
        </LinearLayout>

        <LinearLayout
            style="@style/alarmListItemStyle.weekdayTextLayout"
            android:id="@+id/layoutWednesday"
            android:layout_toStartOf="@id/layoutThursday">

            <View
                style="@style/alarmListItemStyle.weekdaySelectionStyle"
                android:id="@+id/wednesSelect" />

            <TextView
                style="@style/alarmListItemStyle.weekdayTextStyle"
                android:id="@+id/tvWednesday"
                android:text="@string/txt_wednesday" />
        </LinearLayout>

        <LinearLayout
            style="@style/alarmListItemStyle.weekdayTextLayout"
            android:id="@+id/layoutThursday"
            android:layout_toStartOf="@id/layoutFriday">

            <View
                style="@style/alarmListItemStyle.weekdaySelectionStyle"
                android:id="@+id/thursSelect" />

            <TextView
                style="@style/alarmListItemStyle.weekdayTextStyle"
                android:id="@+id/tvThursday"
                android:text="@string/txt_thursday" />
        </LinearLayout>

        <LinearLayout
            style="@style/alarmListItemStyle.weekdayTextLayout"
            android:id="@+id/layoutFriday"
            android:layout_toStartOf="@id/layoutSaturday">

            <View
                style="@style/alarmListItemStyle.weekdaySelectionStyle"
                android:id="@+id/friSelect" />

            <TextView
                style="@style/alarmListItemStyle.weekdayTextStyle"
                android:id="@+id/tvFriday"
                android:text="@string/txt_friday" />
        </LinearLayout>

        <LinearLayout
            style="@style/alarmListItemStyle.weekdayTextLayout"
            android:id="@+id/layoutSaturday"
            android:layout_toStartOf="@id/switchAlarm">

            <View
                style="@style/alarmListItemStyle.weekdaySelectionStyle"
                android:id="@+id/saturSelect" />

            <TextView
                style="@style/alarmListItemStyle.weekdayTextStyle"
                android:id="@+id/tvSaturday"
                android:text="@string/txt_saturday"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            app:switchMinWidth="50dp" />
    </RelativeLayout>
</LinearLayout>
